modules/gdscript/tests/scripts/parser/errors/invalid_dictionary_destructuring_with_missing_elements.gd
func test():
    var {foo = a, bar = } = {foo = 1, bar = 2}
